--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,6 @@
 	<classpathentry kind="lib" path="C:/Users/crist/Downloads/poi-bin-4.1.2-20200217/poi-4.1.2/lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="C:/Users/crist/Downloads/poi-bin-4.1.2-20200217/poi-4.1.2/lib/SparseBitSet-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/crist/Downloads/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/crist/Downloads/poi-bin-4.1.2-20200217.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
